--- a/app/src/main/res/layout/activity_danh_sach_phim.xml
+++ b/app/src/main/res/layout/activity_danh_sach_phim.xml
@@ -1,20 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/layoutButtons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:id="@+id/btnQuayLai"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:background="#D6D6D6"
+            android:padding="4dp"
+            android:text="← Quay Lại"
+            android:textColor="#000000"
+            android:textSize="12sp"
+            tools:ignore="TouchTargetSizeCheck" />
+
+        <Button
+            android:id="@+id/btnHome"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginStart="8dp"
+            android:background="#D6D6D6"
+            android:padding="4dp"
+            android:text="Home"
+            android:textColor="#000000"
+            android:textSize="12sp"
+            tools:ignore="TouchTargetSizeCheck" />
+    </LinearLayout>
 
     <TextView
+        android:id="@+id/tvTieuDe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Danh sách phim"
         android:textSize="20sp"
         android:gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_below="@id/layoutButtons"
         android:layout_marginBottom="16dp"/>
 
     <ListView
         android:id="@+id/listPhim"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="0dp"
+        android:layout_below="@id/tvTieuDe"
+        android:layout_alignParentBottom="true"
+        android:layout_weight="1"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"/>
+
+</RelativeLayout>
