--- a/app/src/main/res/layout/activity_danh_sach_phim.xml
+++ b/app/src/main/res/layout/activity_danh_sach_phim.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/bgrbtn1"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -20,7 +21,7 @@
             android:background="#D6D6D6"
             android:padding="4dp"
             android:text="← Quay Lại"
-            android:textColor="#000000"
+            android:textColor="#FFEA00"
             android:textSize="12sp"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -32,7 +33,7 @@
             android:background="#D6D6D6"
             android:padding="4dp"
             android:text="Home"
-            android:textColor="#000000"
+            android:textColor="#C14949"
             android:textSize="12sp"
             tools:ignore="TouchTargetSizeCheck" />
     </LinearLayout>
