--- a/app/src/main/res/layout/activity_xac_nhan_ve.xml
+++ b/app/src/main/res/layout/activity_xac_nhan_ve.xml
@@ -101,8 +101,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
+        android:background="@drawable/bgrbtn2"
         android:visibility="gone"
         android:padding="20dp">
+
 
         <TextView
             android:id="@+id/tvThanhCong"
